# sample_efficient_gpt

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: B200_QUICKSTART.md  SONICMOE.md
sample_efficient_gpt/: 0101_midtrain.json  0927_code_test.sh  0929_dclm_edu_flash_attn.sh  1202_main_run_data.json  1202_main_run_data_decay.json  1202_main_run_data_decay2.json  1204_main_run_data.json  1204_main_run_data_stage2.json  1226_stable.json  1226_train.sh  1227_decay.json  README.md  __init__.py  baseline.sh  bpe.py  config_schema.py  download_eval.sh  prepare_data_jsons.ipynb  tokenize_with_fast_tokenizer.py  tokenizer.py  train.py  train.sh
sample_efficient_gpt/configs/: base.py  gpt_126m.py  gpt_small_faster.py  main_runs.yaml  moe_runs.yaml  smollm2_imu.yaml  smollm2_wide.yaml
sample_efficient_gpt/data_dclm_edu/: prepare.ipynb
sample_efficient_gpt/docs/: imu1_inference.md
sample_efficient_gpt/evals/: base_eval.py  chat_eval.py  chat_web.py  core_eval.py  execution.py  mbpp_eval.py  mbpp_lite.py
sample_efficient_gpt/evals/tasks/: arc.py  common.py  gsm8k.py  humaneval.py  mmlu.py  nemotron.py  smoltalk.py  tulu3.py
sample_efficient_gpt/fastsplit/: Cargo.toml  pyproject.toml
sample_efficient_gpt/fastsplit/src/: lib.rs
sample_efficient_gpt/rustbpe/: Cargo.toml
sample_efficient_gpt/rustbpe/src/: lib.rs
sample_efficient_gpt/scripts/: benchmark_attn.py  benchmark_matmul.py  convert_tokenizer_to_hf.py  nccl_test.py  test_fp8.py  test_fp8_distributed.py  test_fp8_m.py  test_sharded_optimizer.py  test_sharded_sd.py
sample_efficient_gpt/scripts/data_processing/: edu_filter_ds.py  edu_filter_ds_pleias.py  edu_filter_txt.py  format_and_upload_stack.py  process_stack.ipynb  process_stack_extension.ipynb  python_code_filter.py
sample_efficient_gpt/scripts/hf/: EXPERIMENTS_smollm2_to_imu.md  EXPERIMENTS_smollm2_to_imu_moe.md  convert_hf_to_imu.py  convert_imu1_checkpoint.py  (+2 more)
sample_efficient_gpt/tokenizer/: README.md  convert_tokenizer_to_hf.py  pretokenization.py  split_val.py  tokenize_with_fast_tokenizer.py  tokenizer.py  train.sh  train_bpe.py
sample_efficient_gpt/training/: __init__.py  checkpoint.py  data.py  ddp.py  loss.py  optimizer.py  trainer.py
sample_efficient_gpt/transformer/: __init__.py  attention.py  core.py  moe.py  rope.py  sonic_moe.py  transformer.py  triton_flash_attn.py  triton_flash_attn_qknorm.py
sample_efficient_gpt/utils/: config_tools.py  eval_mbpp.py  profiling.py  sample_outputs.py
(+24 files in other folders)
