[project]
name = "sample_efficient_gpt"
version = "1.0.5"
description = "CS336 Assignment 1"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "einops>=0.8.1", # tensor operations
    "einx>=0.3.0", # more general tensor operations
    "jaxtyping>=0.3.0", # type hints for pytorch/jax/numpy
    "numpy",
    "psutil>=6.0.0",
    "pytest",
    "regex>=2024.11.6", # more powerful regex than the builtin `re` module
    "submitit>=1.5.2", # job submission for SLURM
    "tiktoken>=0.9.0",
    "torch",
    "torchao",
    # "torch~=2.8.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    # "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'", # Intel Macs
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "ty>=0.0.1a16",
    "snakeviz>=2.2.2",
    "maturin>=1.9.1",
    "pathos",
    "maturin[patchelf]",
    "fastsplit",
    "ipykernel>=6.30.1",
    "ruff>=0.13.2",
    "tokenizers>=0.22.1",
    "transformers>=4.56.2",
    "prettytable>=3.16.0",
    "pandas>=2.3.3",
    "pyarrow",
    "datasets==4.2.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sample_efficient_gpt"
module-root = ""

[tool.uv]
package = true
python-preference = "managed"
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchao = [
  { index = "pytorch-cu130" },
]
fastsplit = { path = "sample_efficient_gpt/fastsplit", editable = true }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/nightly/cu130"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
# extend-select = ["UP"]
select = ["UP"]
ignore = [
    "F722",
    "UP037"
]
