[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "fastsplit"
version = "0.1.0"
description = "High-performance splitting/token preprocessor"
authors = [{name="thepowerfuldeez"}]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Operating System :: OS Independent"
]